--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
-  "name": "pandachat",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "dotenv": "^16.3.1",
-    "firebase": "^10.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
-    "sass": "^1.63.6"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@vitejs/plugin-react": "^4.0.1",
-    "eslint": "^8.44.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
-    "vite": "^4.4.0"
-  }
+	"name": "pandachat",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"homepage": "https://yifzheng.github.io/PandaChat/",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/yifzheng/PandaChat.git"
+	},
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
+	},
+	"dependencies": {
+		"dotenv": "^16.3.1",
+		"firebase": "^10.0.0",
+		"gh-pages": "^5.0.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.14.1",
+		"sass": "^1.63.6",
+		"uuid": "^9.0.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.2.14",
+		"@types/react-dom": "^18.2.6",
+		"@vitejs/plugin-react": "^4.0.1",
+		"eslint": "^8.44.0",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.1",
+		"vite": "^4.4.0"
+	}
 }
